--- a/src/features/table/Table.module.css
+++ b/src/features/table/Table.module.css
@@ -1,3 +1,11 @@
+.root {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .buttonWrapper {
     display: flex;
     align-items: center;
@@ -16,22 +24,14 @@
 }
 
 .button {
-    appearance: none;
-    background: none;
-    font-size: 32px;
-    padding-left: 12px;
-    padding-right: 12px;
-    outline: none;
-    border: 2px solid transparent;
-    color: rgb(112, 76, 182);
-    padding-bottom: 4px;
-    cursor: pointer;
-    background-color: rgba(112, 76, 182, 0.1);
-    border-radius: 2px;
-    transition: all 0.15s;
+    background-color: rgb(76, 129, 182);
 }
 
 .table {
     width: 100%;
     overflow: auto;
+}
+
+.tableHeader {
+    font-weight: 700;
 }
